# qView

./: CMakeLists.txt  azure-pipelines.yml
ci/: deploy.yml  install-qt.yml  plugins.yml
ci/pwsh/: buildecm.ps1  buildkimageformats.ps1  getplugins.ps1
ci/pwsh/extra-cmake-modules/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  ECMConfigVersion.cmake  cmake_install.cmake
ci/pwsh/extra-cmake-modules/docs/: cmake_install.cmake
ci/pwsh/extra-cmake-modules/tests/: CTestTestfile.cmake  cmake_install.cmake
ci/pwsh/extra-cmake-modules/tests/ECMAddTests/: CTestTestfile.cmake  cmake_install.cmake
ci/pwsh/extra-cmake-modules/tests/ECMCheckOutboundLicenseTest/: CTestTestfile.cmake  cmake_install.cmake
ci/pwsh/extra-cmake-modules/tests/ECMGenerateExportHeaderTest/: CTestTestfile.cmake  cmake_install.cmake
ci/pwsh/extra-cmake-modules/tests/ECMGenerateHeadersTest/: CTestTestfile.cmake  cmake_install.cmake  run_test.cmake
ci/pwsh/extra-cmake-modules/tests/ECMGeneratePkgConfigFile/: CTestTestfile.cmake  cmake_install.cmake  run_test.cmake
ci/pwsh/extra-cmake-modules/tests/ECMSetupVersionTest/: CTestTestfile.cmake  cmake_install.cmake
ci/pwsh/kimageformats/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake  ecm_uninstall.cmake  install_manifest.txt  prefix.sh.fish
ci/pwsh/kimageformats/autotests/: CTestTestfile.cmake  cmake_install.cmake
ci/pwsh/kimageformats/src/: CTestTestfile.cmake  cmake_install.cmake
ci/pwsh/kimageformats/tests/: CTestTestfile.cmake  cmake_install.cmake
src/: magickloader.cpp
(+36 files in other folders)
